full version before integration with Heroku

--- a/serve_the_model/templates/layout.html
+++ b/serve_the_model/templates/layout.html
@@ -12,9 +12,9 @@
 
 
     {% if title %}
-        <title>My MAFAT challenge server app - {{ title }}</title>
+        <title>MAFAT challenge server app - {{ title }}</title>
     {% else %}
-        <title>My MAFAT Radar challenge server app</title>
+        <title>MAFAT Radar challenge server app</title>
     {% endif %}
 </head>
 <body>
