--- a/serve_the_model/templates/history.html
+++ b/serve_the_model/templates/history.html
@@ -19,7 +19,7 @@
                 <img src="{{ url_for('static', filename= 'segment_images/' + segment.image_name) }}" class="card-img-top" style="width:50%">
               <div class="card-body">
                 <h5 class="card-title">seg_id: {{ segment.segment_id }}</h5>
-                <p class="card-text">target: {{ segment.target }}</p>
+                <p class="card-text">target: {{ segment.target }} == {{ segment.target_type }}</p>
                 <small class="card-text">pred: {{ segment.predictions }}</small>
               </div>
               <div class="card-footer">
